.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Work_Cycle__c.object
<CustomObject>
    <fields>
        <fullName>xcdhcm__Cycle_hours_week__c</fullName>
        <formula>IF(xcdhcm__Cycle_length_days__c &gt; 0, ( (xcdhcm__Total_hours_am_value__c +  xcdhcm__Total_hours_pm_value__c ) *  7.0 ) / xcdhcm__Cycle_length_days__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cycle hours/week</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cycle_length_days__c</fullName>
        <label>Cycle length – days</label>
        <summaryForeignKey>xcdhcm__Working_Day__c.xcdhcm__Work_Cycle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cycle_length_days_search__c</fullName>
        <formula>TEXT( xcdhcm__Cycle_length_days__c )</formula>
        <label>Cycle length – days - search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cycle_pattern__c</fullName>
        <formula>IMAGE(&quot;/resource/xcdhcm__XCD_static_resources/Css/Lite/Work_cycle_pattern_icon.svg&quot;, &quot;Cycle pattern&quot;, 32, 32)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cycle pattern</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__First_working_day_1__c</fullName>
        <label>First working day 1</label>
        <summarizedField>xcdhcm__Working_Day__c.xcdhcm__Day_number__c</summarizedField>
        <summaryFilterItems>
            <field>xcdhcm__Working_Day__c.xcdhcm__Day__c</field>
            <operation>equals</operation>
            <value>Sunday</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Working_Day__c.xcdhcm__Work_Cycle__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__First_working_day_2__c</fullName>
        <label>First working day 2</label>
        <summarizedField>xcdhcm__Working_Day__c.xcdhcm__Day_number__c</summarizedField>
        <summaryFilterItems>
            <field>xcdhcm__Working_Day__c.xcdhcm__Day__c</field>
            <operation>equals</operation>
            <value>Monday</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Working_Day__c.xcdhcm__Work_Cycle__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__First_working_day_3__c</fullName>
        <label>First working day 3</label>
        <summarizedField>xcdhcm__Working_Day__c.xcdhcm__Day_number__c</summarizedField>
        <summaryFilterItems>
            <field>xcdhcm__Working_Day__c.xcdhcm__Day__c</field>
            <operation>equals</operation>
            <value>Tuesday</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Working_Day__c.xcdhcm__Work_Cycle__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__No_working_days_week__c</fullName>
        <formula>IF(xcdhcm__Cycle_length_days__c &gt; 0, xcdhcm__Working_days_in_cycle__c * 7.0 / xcdhcm__Cycle_length_days__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. working days/week</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Template__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to make this Cycle available as a standard template</inlineHelpText>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_hours_am_value__c</fullName>
        <label>Total hours am value</label>
        <summarizedField>xcdhcm__Working_Day__c.xcdhcm__Hours_am_value__c</summarizedField>
        <summaryForeignKey>xcdhcm__Working_Day__c.xcdhcm__Work_Cycle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Total_hours_pm_value__c</fullName>
        <label>Total hours pm value</label>
        <summarizedField>xcdhcm__Working_Day__c.xcdhcm__Hours_pm_value__c</summarizedField>
        <summaryForeignKey>xcdhcm__Working_Day__c.xcdhcm__Work_Cycle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Working_days_in_cycle__c</fullName>
        <label>Working days in cycle</label>
        <summaryFilterItems>
            <field>xcdhcm__Working_Day__c.xcdhcm__System_Working_day__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>xcdhcm__Working_Day__c.xcdhcm__Work_Cycle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Work Cycle</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Cycle_hours_week__c</columns>
        <columns>xcdhcm__Cycle_length_days__c</columns>
        <columns>xcdhcm__Working_days_in_cycle__c</columns>
        <columns>xcdhcm__Cycle_pattern__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>xcdhcm__Template</fullName>
        <columns>NAME</columns>
        <columns>xcdhcm__Description__c</columns>
        <columns>xcdhcm__Cycle_hours_week__c</columns>
        <columns>xcdhcm__Cycle_length_days__c</columns>
        <columns>xcdhcm__Working_days_in_cycle__c</columns>
        <columns>xcdhcm__Cycle_pattern__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>xcdhcm__Template__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Template</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Cycles</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>